# nucleo-f103rb-cmsis-template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.rst  arm.cmake
main/: main.c  main.h
platform/: CMakeLists.txt  STM32F103XB_FLASH.ld  gcc-arm-none-eabi.cmake  startup_stm32f103xb.s
